<resources>
    <string name="app_name">English</string>
    <string name="action_settings">Settings</string>
    <string name="email">Почта</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистриоваться</string>
    <string name="sign">Войти</string>
    <string name="login">Вход</string>
    <string name="resetpassword">Сброс пароля</string>
    <string name="sendlink">Отправить ссылку</string>
    <string name="textviewreset">Для сброса пароля введите почту</string>
    <string name="confirm">Подтвердить</string>
    <string name="textnewpassword">введите новый пароль</string>
    <string name="registrationerror">Ошибка регистрации</string>
    <string name="loginerror">Ошибка входа</string>
    <string name="name_task3">Выбери ответ-2</string>
    <string name="name_task2">Выбери ответ-1</string>
    <string name="name_task1">Впиши ответ</string>
    <string name="task_grammar">Грамматика</string>
    <string name="task_dictionary">Словарь</string>
    <string name="enter_answer">Введите ответ на английском</string>
    <string name="trueAnswer">Правильно</string>
    <string name="falseAnswer">Неправильно</string>
    <string name="result_pattern">%1$d/5</string>
    <string name="ok">Ok</string>
    <string name="finish_result_dialog_pattern">Вы получили %1$d/5 баллов</string>
    <string name="empty_answer_message">Введите ответ</string>
</resources>